src/test/deca/syntax/invalid/sansobjet/lex_int_valid.deca.resu
INT: [@0,133:133='0',<48>,5:0]
INT: [@1,135:136='12',<48>,5:2]
INT: [@2,138:140='100',<48>,5:5]
INT: [@3,143:148='434343',<48>,5:10]
INT: [@4,151:160='2147483647',<48>,5:18]
